@@ -1,3 +1,14 @@
+2007-02-13  Rob Buis  <buis@kde.org>
+
+        Reviewed by Maciej.
+
+        Remove SVGDOMImplementation from the project.
+
+        * CMakeLists.txt:
+        * WebCore.pro:
+        * ksvg2/svg/SVGDOMImplementation.cpp: Removed.
+        * ksvg2/svg/SVGDOMImplementation.h: Removed.
+
 2007-02-13  Brady Eidson <beidson@apple.com>
 
         Reviewed by Maciej and Adam
